syntax = "proto3";
option java_package = "org.ywb.raft.core.proto";
option java_outer_classname = "Protos";
message RequestVoteRpc {
    int32 term = 1;
    string candidate_id = 2;
    int32 last_log_index = 3;
    int32 last_log_term = 4;
}
message RequestVoteResult {
    int32 term = 1;
    bool vote_granted = 2;
}
message AppendEntriesRpc {
    int32 term = 2;
    string leader_id = 3;
    int32 prev_log_index = 4;
    int32 prev_log_term = 5;
    int32 leader_commit = 6;

    message Entry {
        int32 kind = 1;
        int32 index = 2;
        int32 term = 3;
        bytes data = 4;
    }

    repeated Entry entries = 7;
}
message AppendEntriesResult {
    int32 term = 2;
    bool success = 3;
}
// generate source
// cd resources/proto
// protoc --java_out=../../java/ core.proto